--- a/style.css
+++ b/style.css
@@ -1,55 +1,35 @@
-:root {
-  --bg-color: #f2f2f2;
-  --text-color: #141414;
-}
-
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
+*::selection {
+  background: grey;
+  color: white;
+}
+
 body {
-  background: var(--bg-color);
-  font-family: Arial, Helvetica, sans-serif;
+  background: #f2f2f2;
+  color: #141414;
 }
 
-label {
-  display: block;
-  font-size: 1rem;
-  margin-bottom: 10px;
-}
-
-select, textarea {
-  outline: none;
-  font-size: 1rem;
-  padding: 5px;
-}
-
-p {
-  font-size: 1.2rem;
-  margin-bottom: 10px;
-}
-
-/* container e intro -------- */
 .container {
   max-width: 600px;
-  margin: 40px auto;
+  margin: 20px auto;
   padding: 20px;
-  border-radius: 10px;
-  border: 2px solid #282728;
-  color: var(--text-color);
-}
-
-@media (max-width: 610px) {
-  .container {
-    margin: 40px 20px;
-  }
+  border: 2px solid black;
+  border-radius: 4px;
 }
 
 .intro {
-  position: relative;
   margin-bottom: 20px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.intro h1 {
+  position: relative;
+  margin-bottom: 10px;
 }
 
 .intro h1::after {
@@ -63,94 +43,105 @@ p {
 }
 
 .intro p {
-  font-size: 1rem;
-  margin: 10px 0;
+  font-weight: normal;
 }
 
-/* form -------------- */
-.form-nome-completo {
-  display: flex;
-  flex-wrap: wrap;
+/* formulario ---------- */
+.form {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
   gap: 20px;
-  margin-bottom: 30px;
 }
 
-.form-nome label, .form-sobrenome label, .email label {
-  margin: 10px 0;
+.form .col-2 {
+  grid-column: span 2;
 }
 
-.form-nome input, .form-sobrenome input, .email input {
-  color: rgb(63, 62, 62);
-  padding: 10px;
-  font-size: 1rem;
+.form label, p {
+  display: block;
+  font: bold 1rem/1.5 "Arial", sans-serif;
+  margin-bottom: 4px;
+}
+
+.form input[type="text"],
+.form input[type="email"],
+.form select,
+.form textarea,
+.form button {
+  font: 400 1rem/1.5 "Roboto", sans-serif;
+  background: #fff;
+  border: 1px solid gray;
+  padding: 12px;
+  border-radius: 4px;
+  width: 100%;
+}
+
+.form select {
+  width: max-content;
+}
+
+.form input[type="text"]:focus,
+.form input[type="email"]:focus,
+.form select:focus,
+.form textarea:focus {
   outline: none;
-  border: 2px solid #a1a1a1;
-  border-radius: 5px;
+  border-color: rgb(182, 182, 241);
+  box-shadow: 0 0 0 2px rgb(179, 182, 182);
 }
 
-.email input {
-  width: 82%;
-  margin-bottom: 40px;
+.assistir {
+  display: flex;
+  gap: 60px;
+  padding-left: 40px;
 }
 
-/* form assistiu ---------- */
-.form-assistiu label {
-  display: inline-block;
-  margin-right: 10px;
-  margin-bottom: 40px; 
+.assistir label,
+.personagens label {
+  display: inline;
+  font-weight: normal;
 }
 
-/* form-personagens, text area e button------------- */
-.form-personagens {
+.personagens {
   display: grid;
   grid-template-columns: auto 1fr auto 1fr;
   gap: 10px;
-  margin-top: 20px;
 }
 
-.form-temporada {
-  margin: 30px 0 40px;
+.personagens p {
+  grid-column: 1/-1;
 }
 
-.form-temporada label {
-  font-size: 1.2rem;
+.personagens label {
+  line-height: 1;
 }
 
-.form-msg label {
-  font-size: 1.2rem;
-}
-
-.form-msg textarea {
-  color: rgb(63, 62, 62);
-  width: 400px;
-  padding: 10px;
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-button {
-  border: none;
-  background: rgb(19, 102, 143);
-  color: #fff;
-  padding: 10px 20px;
+.form button  {
+  cursor: pointer;
+  width: max-content;
+  place-self: center;
+  padding: 10px 60px;
   text-transform: uppercase;
   font-weight: bold;
-  border-radius: 5px;
-  letter-spacing: .2rem;
-  display: block;
-  margin: 20px 0;
-  cursor: pointer;
   transition: .3s;
 }
 
-button:hover {
-  background: rgb(49, 157, 211);
+.form button:hover {
+  background: rgb(75, 130, 233);
+  color: #fff;
+  border-color: rgb(71, 71, 133);
 }
 
-@media (max-width: 500px) {
-  .form-personagens {
-    grid-template-columns: auto 1fr;
+@media (max-width: 640px) {
+  .container {
+    margin: 20px;
   }
-  .form-msg textarea {
-    width: 250px;
+  .form {
+    grid-template-columns: 1fr;
+  }
+  .form .col-2 {
+    grid-column: 1;
+  }
+  .personagens {
+    grid-template-columns: auto 1fr;
   }
 }
